--- a/hw6_dense_resnet.ipynb
+++ b/hw6_dense_resnet.ipynb
@@ -26,7 +26,7 @@
         "import matplotlib.pyplot as plt\n",
         "import time"
       ],
-      "execution_count": 63,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -37,7 +37,7 @@
       "source": [
         "(train_images, train_labels),(test_images, test_labels) = tf.keras.datasets.cifar10.load_data()\n"
       ],
-      "execution_count": 64,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -48,7 +48,7 @@
           "height": 161
         },
         "id": "6YyoyUNmXkxV",
-        "outputId": "4fe98a22-5303-4a28-cfcb-450748867420"
+        "outputId": "d41ee1d8-8a93-4787-c1c5-022e04b3ceca"
       },
       "source": [
         "print(\"The shape of the image set: \", train_images.shape)\n",
@@ -64,7 +64,7 @@
         "  ax[count].set_title(name_dict[label])\n",
         "  ax[count].axis(\"off\")"
       ],
-      "execution_count": 65,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "test_data = test_data.shuffle(buffer_size = 64)\n",
         "test_data = test_data.prefetch(16)"
       ],
-      "execution_count": 66,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
         "    # compute duration of an epoch\n",
         "    return round(time_per_training_step, 2)"
       ],
-      "execution_count": 67,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -172,18 +172,18 @@
         "    super(ResidualBlock,self).__init__()\n",
         "\n",
         "    #Define the different layers we need\n",
-        "    self.block = [tf.keras.layers.Conv2D(filters = 125, kernel_size = 1, \n",
+        "    self.block = [tf.keras.layers.Conv2D(filters = 64, kernel_size = 1, \n",
         "                                        #kernel_regularizer = tf.keras.regularizers.l2(0.01), \n",
         "                                         padding = 'same'),\n",
         "                  tf.keras.layers.BatchNormalization(),\n",
         "                  tf.keras.layers.ReLU(),\n",
         "\n",
-        "                  tf.keras.layers.Conv2D(filters = 64, kernel_size = 3,\n",
+        "                  tf.keras.layers.Conv2D(filters = 128, kernel_size = 3,\n",
         "                                        #kernel_regularizer = tf.keras.regularizers.l2(0.01), \n",
         "                                         padding = 'same'),\n",
         "                  tf.keras.layers.BatchNormalization(),\n",
         "                  tf.keras.layers.ReLU(),\n",
-        "                  tf.keras.layers.Conv2D(filters = 125, kernel_size = 1,\n",
+        "                  tf.keras.layers.Conv2D(filters = 64, kernel_size = 1,\n",
         "                                        #kernel_regularizer = tf.keras.regularizers.l2(0.01), \n",
         "                                         padding = 'same'),\n",
         "                  tf.keras.layers.BatchNormalization(),\n",
@@ -197,7 +197,7 @@
         "\n",
         "    return x"
       ],
-      "execution_count": 68,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "\n",
         "    self.blocks = []\n",
         "    self.pre_blocks = []\n",
-        "    self.pre_blocks.append(tf.keras.layers.Conv2D(filters = 125, kernel_size = 3, activation = tf.keras.activations.relu,\n",
+        "    self.pre_blocks.append(tf.keras.layers.Conv2D(filters = 64, kernel_size = 3, activation = tf.keras.activations.relu,\n",
         "                                        #kernel_regularizer = tf.keras.regularizers.l2(0.01), \n",
         "                                        padding = 'same'))\n",
         "    for _ in range(numb_of_blocks):\n",
@@ -238,7 +238,7 @@
         "\n",
         "    return x"
       ],
-      "execution_count": 69,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -262,7 +262,7 @@
         "\n",
         "    #which layers should I use?\n",
         "    self.layers = [\n",
-        "                   tf.keras.layers.Conv2D(filters = 64, kernel_size = 1),\n",
+        "                   tf.keras.layers.Conv2D(filters = 64, activation = tf.keras.activations.relu, kernel_size = 1),\n",
         "                   tf.keras.layers.MaxPool2D()\n",
         "    ]\n",
         "  \n",
@@ -280,18 +280,18 @@
         "    super(Block,self).__init__()\n",
         "\n",
         "    self.block = [\n",
-        "             tf.keras.layers.Conv2D(filters = 125, padding = 'same', input_shape = (32,32,125), kernel_size =3, activation = tf.keras.activations.relu),\n",
+        "             tf.keras.layers.Conv2D(filters = 64, padding = 'same', input_shape = (32,32,64), kernel_size =3, activation = tf.keras.activations.relu),\n",
         "             tf.keras.layers.BatchNormalization(),\n",
         "             tf.keras.layers.ReLU()\n",
         "    ]\n",
         "    \n",
-        "    self.concatenate = tf.keras.layers.Concatenate()\n",
+        "    \n",
         "\n",
         "  def call(self, input_x, training):\n",
         "    x = input_x\n",
         "\n",
         "    for layer in self.block:\n",
-        "      x = self.concatenate([layer(x),x])\n",
+        "      x = layer(x)\n",
         "    \n",
         "    return x\n",
         "\n",
@@ -301,13 +301,13 @@
         "    super(DenseBlock,self).__init__()\n",
         "\n",
         "    self.block = [Block() for _ in range(nr_blocks)]\n",
-        "\n",
+        "    self.concatenate = tf.keras.layers.Concatenate()\n",
         "\n",
         "  def call(self, input_x, training):\n",
         "    x = input_x\n",
         "\n",
         "    for blocks in self.block:\n",
-        "      x = blocks(x, training)\n",
+        "      x = self.concatenate([blocks(x, training),x])\n",
         "\n",
         "    return x\n",
         "\n",
@@ -317,7 +317,7 @@
         "    super(DenseNet,self).__init__()\n",
         "\n",
         "    self.blocks = []\n",
-        "    self.first_layer = tf.keras.layers.Conv2D(filters=125, input_shape = (32,32,3), activation = tf.keras.activations.relu, kernel_size = 3, padding = \"same\",\n",
+        "    self.first_layer = tf.keras.layers.Conv2D(filters=64, input_shape = (32,32,3), activation = tf.keras.activations.relu, kernel_size = 3, padding = \"same\",\n",
         "                                              #kernel_regularizer = tf.keras.regularizers.l2(0.01)\n",
         "                                              )\n",
         "    \n",
@@ -341,10 +341,10 @@
         "    \n",
         "    for layer in self.post_blocks:\n",
         "      x = layer(x) \n",
-        "      \n",
+        "\n",
         "    return x"
       ],
-      "execution_count": 70,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -393,7 +393,7 @@
         "  accuracy = np.mean(accuracies)\n",
         "  return loss, accuracy\n"
       ],
-      "execution_count": 71,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BbmBiXePP34i",
-        "outputId": "8f17703a-4f53-47d5-e04e-319c6aaceb81"
+        "outputId": "274407c5-f73c-48ff-836b-8a6831280cde"
       },
       "source": [
         "tf.keras.backend.clear_session()\n",
@@ -509,17 +509,17 @@
           "output_type": "stream",
           "text": [
             "---------------------------------------- Epoch Number: 0\n",
-            "the training step took 264.93 seconds\n",
-            "RESNET: training_loss:  11.065089 training_accuracy:  0.3209705763066663\n",
-            "DENSENET: training_loss:  8.798618 training_accuracy:  0.4590857207449341\n",
-            "RESNET: test_loss:  12.862775 test_accuracy:  0.20193073248407642\n",
-            "DenseNET: test_loss:  12.696809 test_accuracy:  0.2118829617834395\n",
+            "the training step took 52.25 seconds\n",
+            "RESNET: training_loss:  9.356339 training_accuracy:  0.4508179766486959\n",
+            "DENSENET: training_loss:  7.4661446 training_accuracy:  0.56037575710188\n",
+            "RESNET: test_loss:  11.741115 test_accuracy:  0.2746815286624204\n",
+            "DenseNET: test_loss:  9.054968 test_accuracy:  0.45362261146496813\n",
             "---------------------------------------- Epoch Number: 1\n",
-            "the training step took 263.35 seconds\n",
-            "RESNET: training_loss:  10.403714 training_accuracy:  0.3609989544825348\n",
-            "DENSENET: training_loss:  6.5827074 training_accuracy:  0.5963712709179575\n",
-            "RESNET: test_loss:  13.459268 test_accuracy:  0.1650079617834395\n",
-            "DenseNET: test_loss:  7.888862 test_accuracy:  0.5174164012738853\n",
+            "the training step took 51.77 seconds\n",
+            "RESNET: training_loss:  8.861111 training_accuracy:  0.4707538562147297\n",
+            "DENSENET: training_loss:  6.183727 training_accuracy:  0.6390469291533445\n",
+            "RESNET: test_loss:  10.168947 test_accuracy:  0.3781847133757962\n",
+            "DenseNET: test_loss:  7.0275064 test_accuracy:  0.5818073248407644\n",
             "---------------------------------------- Epoch Number: 2\n"
           ],
           "name": "stdout"
