added labels to dataset

--- a/hw7_aes.ipynb
+++ b/hw7_aes.ipynb
@@ -24,7 +24,7 @@
         "import matplotlib.pyplot as plt\r\n",
         "import time"
       ],
-      "execution_count": 101,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -36,7 +36,7 @@
         "#load the dataset\r\n",
         "(training_images, training_labels), (test_images, test_labels) = tf.keras.datasets.fashion_mnist.load_data()"
       ],
-      "execution_count": 102,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -47,7 +47,7 @@
           "height": 150
         },
         "id": "jvrHvVbfSYRW",
-        "outputId": "9a11ab62-a801-407e-cd1f-dc73038a4bb5"
+        "outputId": "b7e802fc-fe4a-4a29-a17c-21a3a913f200"
       },
       "source": [
         "#Visualization\r\n",
@@ -66,7 +66,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 103,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,24 +115,31 @@
         "training_images = tf.data.Dataset.from_tensor_slices(training_images)\r\n",
         "training_images = training_images.map(lambda img : tf.cast(tf.expand_dims(img,-1), tf.float32))\r\n",
         "training_images = training_images.map(lambda img: img/255)\r\n",
+        "#labels must be stored as a Dataset to add them to the training_data\r\n",
+        "#as we do not use them for training no one_hot encoding is needed though\r\n",
+        "training_labels = tf.data.Dataset.from_tensor_slices(training_labels)\r\n",
         "\r\n",
         "#Prepare the dataset\r\n",
         "#this includes dividing the dataset into batches\r\n",
-        "training_data = training_images\r\n",
+        "training_data = tf.data.Dataset.zip((training_images, training_labels))\r\n",
         "training_data = training_data.batch(64)\r\n",
         "training_data = training_data.shuffle(buffer_size= 64)\r\n",
         "training_data = training_data.prefetch(16)\r\n",
         "\r\n",
+        "test_images = test_images[:1000]\r\n",
+        "test_labels = test_labels[:1000]\r\n",
         "test_images = tf.data.Dataset.from_tensor_slices(test_images)\r\n",
         "test_images = test_images.map(lambda img : tf.cast(tf.expand_dims(img,-1), tf.float32))\r\n",
         "test_images = test_images.map(lambda img: img/255)\r\n",
         "\r\n",
-        "test_data = test_images\r\n",
+        "test_labels = tf.data.Dataset.from_tensor_slices(test_labels)\r\n",
+        "\r\n",
+        "test_data = tf.data.Dataset.zip((test_images, test_labels))\r\n",
         "test_data = test_data.batch(64)\r\n",
         "test_data = test_data.shuffle(buffer_size= 64)\r\n",
         "test_data = test_data.prefetch(16)"
       ],
-      "execution_count": 104,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -180,7 +187,7 @@
         "    super(Encoder, self).__init__()\r\n",
         "    #self.dense_layer = tf.keras.layers.Dense(units = (28*28), activation = tf.keras.activations.relu)\r\n",
         "    self.block1 = EncBlock(32)\r\n",
-        "    self.block2 = EncBlock(64)\r\n",
+        "    self.block2 = EncBlock(16)\r\n",
         "\r\n",
         "    self.flatten = tf.keras.layers.Flatten()\r\n",
         "    self.encoding_layer = tf.keras.layers.Dense(units = 10, activation = tf.keras.activations.softmax)\r\n",
@@ -194,7 +201,7 @@
         "\r\n",
         "    return x\r\n"
       ],
-      "execution_count": 105,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -240,7 +247,7 @@
         "\r\n",
         "    return x"
       ],
-      "execution_count": 106,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -270,7 +277,7 @@
         "\r\n",
         "    return x"
       ],
-      "execution_count": 107,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -290,7 +297,7 @@
       "source": [
         ""
       ],
-      "execution_count": 107,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -308,30 +315,28 @@
         "id": "mowk0bEukIDn"
       },
       "source": [
-        "def train_step(model, input, loss_function, optimizer, training):\r\n",
+        "def train_step(model, samples, loss_function, optimizer, training= True):\r\n",
         "  with tf.GradientTape() as tape:\r\n",
-        "    reconstructed_img = model(input, training)\r\n",
-        "    loss = loss_function(reconstructed_img, input)\r\n",
+        "    reconstructed_img = model(samples, training)\r\n",
+        "    loss = loss_function(reconstructed_img, samples)\r\n",
         "\r\n",
         "    gradients = tape.gradient(loss, model.trainable_variables)\r\n",
         "  \r\n",
         "  optimizer.apply_gradients(zip(gradients, model.trainable_variables))\r\n",
-        "\r\n",
-        "  plot_img(reconstructed_img, input)\r\n",
         "  \r\n",
         "  return loss\r\n",
         "\r\n",
-        "def test(model, input, loss_function):\r\n",
+        "def test(model, input, loss_function, training= False):\r\n",
         "  losses = []\r\n",
         "  accuracies = []\r\n",
         "\r\n",
-        "  for image in input:\r\n",
-        "    reconstructed_img = model(image)\r\n",
+        "  for image,label in input:\r\n",
+        "    reconstructed_img = model(image, training)\r\n",
         "    loss = loss_function(reconstructed_img, image)\r\n",
         "\r\n",
         "  return loss\r\n"
       ],
-      "execution_count": 108,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -350,7 +355,7 @@
         "  ax[1].set_title(\"input\")\r\n",
         "  ax[1].axis(\"off\")"
       ],
-      "execution_count": 109,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -359,20 +364,23 @@
         "id": "AsKnXBlmQBdY"
       },
       "source": [
-        ""
+        "def timing(start):\r\n",
+        "    now = time.time()\r\n",
+        "    time_per_training_step = now - start\r\n",
+        "    # compute duration of an epoch\r\n",
+        "    return round(time_per_training_step, 2)"
       ],
-      "execution_count": 109,
+      "execution_count": 78,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 591
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IE-08M-0lXN3",
-        "outputId": "efa051b3-a185-493c-ecbb-624d3eef3862"
+        "outputId": "90fb6ada-bdf1-45b7-c0e7-81133cb12f6a"
       },
       "source": [
         "tf.keras.backend.clear_session()\r\n",
@@ -389,45 +397,49 @@
         "loss_function = tf.keras.losses.MeanSquaredError()\r\n",
         "optimizer = tf.keras.optimizers.Adam(learning_rate)\r\n",
         "\r\n",
+        "running_average_factor = 0.95\r\n",
+        "\r\n",
         "\r\n",
         "steps = []\r\n",
         "\r\n",
         "for epoch in range(epochs):\r\n",
+        "  print(epoch, \". epoch --------------------------------------------------------------------------------\")\r\n",
         "  steps.append(epoch)\r\n",
+        "  losses = []\r\n",
         "\r\n",
-        "  for images in training_data:\r\n",
+        "  start = time.time()\r\n",
+        "  original_loss = 0\r\n",
+        "  for (images,labels) in training_data:\r\n",
         "    train_loss = train_step(conv_ae, images, loss_function, optimizer, training = True)\r\n",
         "\r\n",
-        "  #some sort of plotting\r\n"
+        "    original_loss = running_average_factor * original_loss + (1-running_average_factor) * train_loss\r\n",
+        "  losses.append(original_loss)\r\n",
+        "  \r\n",
+        "  print(f\"the training step took {timing(start)} seconds\")\r\n",
+        "  #some sort of plotting\r\n",
+        "  print(\"train_loss\", np.mean(losses))"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\u001b[0m in \u001b[0;36mmake_one_shot_iterator\u001b[0;34m(dataset)\u001b[0m\n\u001b[1;32m   2698\u001b[0m     \u001b[0;31m# datasets (e.g. for prefetching) override its behavior.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2699\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_one_shot_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2700\u001b[0m   \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'tensorflow.python.framework.ops.EagerTensor' object has no attribute '_make_one_shot_iterator'",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   2178\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2179\u001b[0;31m       \u001b[0mvariant_tensor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_as_variant_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2180\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\u001b[0m in \u001b[0;36m_as_variant_tensor\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   2635\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_as_variant_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2636\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_variant_tensor\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2637\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'tensorflow.python.framework.ops.EagerTensor' object has no attribute '_variant_tensor'",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-110-c818c606f10c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mimages\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtraining_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mtrain_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconv_ae\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_function\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtraining\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m   \u001b[0;31m#some sort of plotting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-108-94faa21d6011>\u001b[0m in \u001b[0;36mtrain_step\u001b[0;34m(model, input, loss_function, optimizer, training)\u001b[0m\n\u001b[1;32m      8\u001b[0m   \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_gradients\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgradients\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable_variables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0mplot_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreconstructed_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-109-69a3033e74df>\u001b[0m in \u001b[0;36mplot_img\u001b[0;34m(image_rec, image)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_rec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0miterator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_one_shot_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_rec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0mimage_r\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_next\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0miterator_i\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_one_shot_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_rec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\u001b[0m in \u001b[0;36mmake_one_shot_iterator\u001b[0;34m(dataset)\u001b[0m\n\u001b[1;32m   2699\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_one_shot_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2700\u001b[0m   \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2701\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mDatasetV1Adapter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_one_shot_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2702\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2703\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, dataset)\u001b[0m\n\u001b[1;32m   2631\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2632\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2633\u001b[0;31m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDatasetV1Adapter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2634\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2635\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_as_variant_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   2189\u001b[0m                            \u001b[0;34m\"if that uses attributes defined in the __init__ \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2190\u001b[0m                            \u001b[0;34m\"method, those attrs need to be defined before the \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2191\u001b[0;31m                            \"super call.\".format(e))\n\u001b[0m\u001b[1;32m   2192\u001b[0m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDatasetV1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvariant_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2193\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'tensorflow.python.framework.ops.EagerTensor' object has no attribute '_variant_tensor': A likely cause of this error is that the super call for this dataset is not the last line of the __init__ method. The base class causes the _as_variant_tensor call in its constructor and if that uses attributes defined in the __init__ method, those attrs need to be defined before the super call."
-          ]
+          "output_type": "stream",
+          "text": [
+            "0 . epoch --------------------------------------------------------------------------------\n"
+          ],
+          "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2bgFcZmXavIg"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -444,7 +456,7 @@
         "id": "SXpaDjlEoCKT"
       },
       "source": [
-        ""
+        "#test_embeddings = test_data[:1000]"
       ],
       "execution_count": null,
       "outputs": []
